refactor code and update tests
